--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt": "0.4.5",
     "grunt-contrib-connect": "0.10.1",
     "grunt-contrib-qunit": "0.7.0",
-    "qunitjs": "1.18.0"
+    "qunitjs": "1.18.0",
+    "requirejs": "2.1.20"
   }
 }
