--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "url": "git://github.com/web-stories/dynamic-textarea.git"
   },
   "author": "Fagner Brack",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "grunt": "0.4.5",
+    "grunt-contrib-connect": "0.10.1",
+    "grunt-contrib-qunit": "0.7.0",
+    "qunitjs": "1.18.0",
+    "requirejs": "2.1.20"
+  }
 }
