--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-connect": "0.10.1",
+    "grunt-contrib-jshint": "0.11.2",
     "grunt-contrib-qunit": "0.7.0",
     "qunitjs": "1.18.0",
     "requirejs": "2.1.20"
