Add more tags for npm

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/dynamic-textarea.js",
   "keywords": [
     "autogrow",
+    "grow",
+    "height",
     "textarea",
     "dynamic",
     "autosize",
