--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-connect": "0.10.1",
     "grunt-contrib-jshint": "0.11.2",
     "grunt-contrib-qunit": "0.7.0",
+    "grunt-jscs": "2.0.0",
     "qunitjs": "1.18.0",
     "requirejs": "2.1.20"
   }
